<resources>
    <string name="app_name">野生湾区日报</string>
    <string name="app_desc">关注创业、互联网、技术。每天精 5 条英文链接。</string>

    <string name="title_section_latest">最新一期</string>
    <string name="title_section_past">往期文章</string>
    <string name="title_section_random">随机文章</string>
    <string name="title_section_about">关于</string>
    <string name="title_tag">标签：%1$s</string>

    <string name="title_pattern_long">%1$s【湾区日报】第%2$d期</string>
    <string name="title_pattern">%1$s 第%2$d期</string>

    <string name="navigation_drawer_open">打开侧边栏</string>
    <string name="navigation_drawer_close">关闭侧边栏</string>

    <string name="action_share">分享</string>

    <string name="btn_share">分享</string>
    <string name="btn_comment">简评</string>
    <string name="btn_original">原链</string>
    <string name="btn_easy_read">易读</string>

    <string name="network_error">请求错误，请检查网络连接</string>
    <string name="no_issue">找不到日报 T_T</string>

    <string name="title_activity_web_view">浏览器</string>

    <string name="random_post">刷出好文章</string>

    <string name="recommend_app">推荐【湾区日报】 Android App. </string>
    <string name="share_me">分享湾区日报</string>
    <string name="share_post">分享日报</string>
    <string name="share_link">分享链接</string>
    <string name="via_app">(via 湾区日报: %1$s)</string>

    <string name="number_pattern">第%2$d期</string>

    <string name="web">WEB</string>
    <string name="web_desc">每天精选 5 条英文链接，你每天的灵感来源。欢迎发邮件投稿、提意见、提交 bug。</string>
    <string name="official_site">官方网站</string>
    <string name="official_site_link">wanqu.co</string>
    <string name="about_wanqu">关于湾区日报</string>
    <string name="about_wanqu_link">wanqu.co/about</string>
    <string name="wanqu_email">湾区日报邮箱</string>
    <string name="wanqu_email_value">hi@wanqu.co</string>

    <string name="social">SOCIAL</string>
    <string name="social_desc">关注我们的社交帐号，参与互动。</string>
    <string name="weibo">微博</string>
    <string name="weibo_account">\@湾区日报BayArea</string>
    <string name="weichat">微信</string>
    <string name="weichat_account">wanquribao</string>
    <string name="twitter">Twitter</string>
    <string name="twitter_account">\@wanquribao</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_account">湾区日报</string>

    <string name="about_me">关于本软件</string>
    <string name="me_desc">本软件为非官方版本~~</string>
    <string name="author">本人</string>
    <string name="blog_link">maogm.com</string>
    <string name="my_weibo_account">\@游冥客</string>
    <string name="my_email">我的邮箱</string>
    <string name="my_email_value">maogm12@gmail.com</string>
    <string name="send_email">发送邮件</string>
    <string name="project_address">项目地址</string>
    <string name="project_url">https://github.com/Garnel/WanquRibao</string>
    <string name="current_version">当前版本</string>
    <string name="day_born">2015.07.21</string>


    <string name="drawer_item1">最新一期</string>
    <string name="drawer_item2">往期文章</string>
    <string name="drawer_item3">随机文章</string>

    <string name="drawer_version_title">其他</string>
    <string name="drawer_version_item1">关于</string>

    <string name="choose_tag">选择标签查看文章</string>
    <string name="cancel">取消</string>

    <string name="open_in_browser">在浏览器中打开</string>
    <string name="exit">退出</string>
    <string name="no_url">此页面木有链接 ~</string>

    <string name="new_version_available">有新版本啦~~</string>
    <string name="go_to_market">要去应用市场下载么?</string>
    <string name="next_time">下次再说</string>
    <string name="confirm_update">好哒，去升级</string>

</resources>
