<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_daily"
            android:title="@string/drawer_item1"
            android:checked="true"/>
        <item
            android:id="@+id/nav_menu2"
            android:icon="@drawable/ic_past"
            android:title="@string/drawer_item2"/>
        <item
            android:id="@+id/nav_menu3"
            android:icon="@drawable/ic_random"
            android:title="@string/drawer_item3"/>
    </group>

    <item android:title="@string/drawer_version_title">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_item"
                android:title="@string/drawer_version_item1"/>
        </menu>
    </item>

</menu>
