<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/list_item_padding">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="======================"
        android:textColor="@android:color/black"
        android:textSize="@dimen/title_size" />

    <TextView
        android:id="@+id/tv_domain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="=========="
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="======================================================================"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_share"
            style="@style/list_item_button"
            android:drawableLeft="@drawable/ic_share"
            android:drawableStart="@drawable/ic_share"
            android:text="@string/btn_share"/>

        <Button
            android:id="@+id/btn_comment"
            style="@style/list_item_button"
            android:drawableLeft="@drawable/ic_more"
            android:drawableStart="@drawable/ic_more"
            android:text="@string/btn_comment"/>

        <Button
            android:id="@+id/btn_original"
            style="@style/list_item_button"
            android:drawableLeft="@drawable/ic_link"
            android:drawableStart="@drawable/ic_link"
            android:text="@string/btn_original"/>

        <Button
            android:id="@+id/btn_easy_read"
            style="@style/list_item_button"
            android:drawableLeft="@drawable/ic_quoteleft"
            android:drawableStart="@drawable/ic_quoteleft"
            android:text="@string/btn_easy_read"/>
    </LinearLayout>
</LinearLayout>