<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Title"
        android:id="@+id/tv_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="link"
        android:id="@+id/tv_url" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="summary"
        android:id="@+id/tv_summary" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_share"
            android:drawableStart="@drawable/icon-share"
            android:drawableLeft="@drawable/icon-share"
            android:background="@android:color/transparent"
            android:id="@+id/btn_share" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_comment"
            android:drawableStart="@drawable/icon-more"
            android:drawableLeft="@drawable/icon-more"
            android:background="@android:color/transparent"
            android:id="@+id/btn_comment" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_original"
            android:drawableStart="@drawable/icon-link"
            android:drawableLeft="@drawable/icon-link"
            android:background="@android:color/transparent"
            android:id="@+id/btn_original" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_easy_read"
            android:drawableStart="@drawable/icon-more"
            android:drawableLeft="@drawable/icon-more"
            android:id="@+id/btn_easy_read" />
    </LinearLayout>
</LinearLayout>